[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/Book3D.gd" type="Script" id=1]
[ext_resource path="res://scenes/Page.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PageAnimation.tscn" type="PackedScene" id=3]
[ext_resource path="res://goat/main_scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/EnvironmentSelector.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/BookMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://goat/main_scenes/InteractiveItem.tscn" type="PackedScene" id=7]
[ext_resource path="res://goat/main_scenes/InteractiveScreen.tscn" type="PackedScene" id=10]

[sub_resource type="SpatialMaterial" id=1]

[sub_resource type="QuadMesh" id=2]

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0 )

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="QuadMesh" id=5]

[sub_resource type="ConcavePolygonShape" id=6]
data = PoolVector3Array( -0.5, -0.5, 0, -0.5, 0.5, 0, 0.5, 0.5, 0, -0.5, -0.5, 0, 0.5, 0.5, 0, 0.5, -0.5, 0 )

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="QuadMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]

[sub_resource type="QuadMesh" id=12]

[node name="Book3D" type="Spatial"]
script = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2, 3 )
shadow_enabled = true
shadow_bias = 0.01
omni_range = 15.0
omni_shadow_mode = 0
omni_shadow_detail = 0

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="Camera" parent="Player" index="1"]
current = true

[node name="RayCast3D" parent="Player/Camera" index="0"]
cast_to = Vector3( 0, 0, -10 )

[node name="Book" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1.45758, 0.258819, 0, -0.390558, 0.965926, -0.5, 1.85, -1 )

[node name="Static" type="Spatial" parent="Book"]

[node name="PageLeft" type="MeshInstance" parent="Book/Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Book/Static/PageLeft" groups=["flip_left"]]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Book/Static/PageLeft/StaticBody"]
shape = SubResource( 3 )

[node name="InteractiveItem" parent="Book/Static/PageLeft" instance=ExtResource( 7 )]
unique_name = "flip_left"

[node name="PageRight" type="MeshInstance" parent="Book/Static"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )

[node name="StaticBody" type="StaticBody" parent="Book/Static/PageRight" groups=["flip_right"]]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Book/Static/PageRight/StaticBody"]
shape = SubResource( 6 )

[node name="InteractiveItem" parent="Book/Static/PageRight" instance=ExtResource( 7 )]
unique_name = "flip_right"

[node name="Turning" parent="Book" instance=ExtResource( 3 )]
visible = false

[node name="Back" parent="Book/Turning/Page" index="1"]
material_override = SubResource( 7 )

[node name="Front" parent="Book/Turning/Page" index="2"]
material_override = SubResource( 8 )

[node name="PageLeft" type="MeshInstance" parent="Book/Turning"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 9 )
mesh = SubResource( 10 )

[node name="PageRight" type="MeshInstance" parent="Book/Turning"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0 )
material_override = SubResource( 11 )
mesh = SubResource( 12 )

[node name="Viewport1" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport1" instance=ExtResource( 2 )]
textured = true

[node name="Viewport2" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport2" instance=ExtResource( 2 )]
textured = true

[node name="Viewport3" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport3" instance=ExtResource( 2 )]
textured = true

[node name="Viewport4" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport4" instance=ExtResource( 2 )]
textured = true

[node name="Viewport5" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport5" instance=ExtResource( 2 )]
textured = true

[node name="Viewport6" type="Viewport" parent="."]
size = Vector2( 400, 600 )
usage = 0
render_target_v_flip = true

[node name="Page" parent="Viewport6" instance=ExtResource( 2 )]
textured = true

[node name="Tween" type="Tween" parent="."]

[node name="BookSelector" parent="." instance=ExtResource( 10 )]
transform = Transform( -1.74846e-07, 0, 1, 0, 4.24, 0, -4, 0, -4.37114e-08, -4, 1.85, 0 )
unique_name = "book_selector"
content_size = Vector2( 400, 424 )
unshaded = true

[node name="Content" parent="BookSelector" instance=ExtResource( 6 )]

[node name="EnvironmentSelector" parent="." instance=ExtResource( 10 )]
transform = Transform( -1.74846e-07, 0, -4, 0, 4, 0, 4, 0, -1.74846e-07, 4, 1.85, 0 )
unique_name = "environment_selector"
content_size = Vector2( 600, 600 )
unshaded = true

[node name="Content" parent="EnvironmentSelector" instance=ExtResource( 5 )]

[connection signal="animation_finished" from="Book/Turning/Page/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Player"]
[editable path="Book/Turning"]
